--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -1,7 +1,7 @@
 # Warning: This file is Ansible Managed, manual changes will be overwritten on next playbook run.
 #!/usr/bin/env bash
 
-cluster.name: "elk_elastic-cluster"
+cluster.name: "{{ cluster_name }}"
 
 #path.data:  # директория для хранения данных
 
